--- a/frontend/src/app/delete-client/delete-client.component.html
+++ b/frontend/src/app/delete-client/delete-client.component.html
@@ -17,7 +17,7 @@
 
     <div class="action-btns">
         <ng-template  #showBtn> 
-            <button mat-button class="btn-yellow">Recalculate my position</button>
+            <button mat-button class="btn-yellow" (click)="WatchPosition()">Recalculate my position</button>
         </ng-template>
         <button mat-button class="btn-yellow" (click)="showcheck()"
             [disabled]="!Status">Next</button>
