--- a/frontend/src/app/admin/roles/roles.component.html
+++ b/frontend/src/app/admin/roles/roles.component.html
@@ -2,9 +2,9 @@
     <div class="table-holder">
 
         <div class="title-holder">
-          <h1 class="list-title">Users</h1>
+          <h1 class="list-title">Roles</h1>
           <div class="btns">
-            <button mat-button routerLink="/addUser">Add New User</button>
+            <button mat-button (click)="addRole()">Add New Role</button>
           </div>
         </div>
 
@@ -18,72 +18,37 @@
             <td mat-cell *matCellDef="let request">{{request.UserID}}</td>
           </ng-container> -->
           
-          <ng-container matColumnDef="Name">
-            <th class="header name-column" mat-header-cell *matHeaderCellDef>
-              <span>Name</span>
+          <ng-container matColumnDef="Role">
+            <th class="header role-column" mat-header-cell *matHeaderCellDef>
+              <span>Role</span>
               <!-- <button mat-button class="float-right btn-icon">
                 <mat-icon class="sort-icon" ></mat-icon>
               </button> -->
             </th>
-            <td mat-cell *matCellDef="let request">{{request.name}}</td>
+            <td mat-cell *matCellDef="let request"> {{ request.name}}</td>
           </ng-container>
       
-          <ng-container matColumnDef="CIN">
-            <th class="header cin-column" mat-header-cell *matHeaderCellDef>
-              <span>CIN</span>
+          <ng-container matColumnDef="Permissions">
+            <th class="header permission-column" mat-header-cell *matHeaderCellDef>
+              <span>Permissions</span>
               <!-- <button mat-button  class="float-right btn-icon">
                 <mat-icon class="sort-icon" ></mat-icon>
               </button> -->
             </th>
-            <td mat-cell *matCellDef="let request">{{request.CIN}}</td>
-          </ng-container>
-          
-          <ng-container matColumnDef="Phone Number">
-            <th class="header number-column" mat-header-cell *matHeaderCellDef>
-              <span>Phone Number</span>
-              <!-- <button mat-button  class="float-right btn-icon">
-                <mat-icon class="sort-icon" ></mat-icon>
-              </button> -->
-            </th>
-            <td mat-cell *matCellDef="let request">{{request.phone}}</td>
-          </ng-container>
             
-          <ng-container matColumnDef="Email">
-            <th class="header email-column" mat-header-cell *matHeaderCellDef>
-              <span>Email</span>
-              <!-- <button mat-button  class="float-right btn-icon">
-                <mat-icon class="sort-icon"></mat-icon>
-              </button> -->
-            </th>
-            <td mat-cell *matCellDef="let request">{{request.email}}</td>
-          </ng-container>
-
-          <ng-container matColumnDef="Role">
-            <th class="header role-column" mat-header-cell *matHeaderCellDef>
-              <span>Role</span>
-              <!-- <button mat-button  class="float-right btn-icon">
-                <mat-icon class="sort-icon" ></mat-icon>
-              </button> -->
-            </th>
-            <td mat-cell *matCellDef="let request">
-              {{request.role}}
+            <td mat-cell *matCellDef="let request" style="padding: 10px;">
+              <ng-container *ngFor="let permission of request.permissions">
+                <div class="permission">
+                  <mat-icon>done</mat-icon>
+                  <span>{{permission}}</span>
+                </div>
+              </ng-container>
             </td>
           </ng-container>
-
-
-          <ng-container matColumnDef="Status">
-            <th class="header role-column" mat-header-cell *matHeaderCellDef>
-              <span>Status</span>
-              <!-- <button mat-button  class="float-right btn-icon">
-                <mat-icon class="sort-icon" ></mat-icon>
-              </button> -->
-            </th>
-            <ng-container *matCellDef="let request" >
-              <td mat-cell *ngIf="request.status=='out of work'"><span style="background-color: #AE5827; padding: 3px; color: #fff; border-radius: 3px;">{{request.status}}</span></td>
-              <td mat-cell *ngIf="request.status=='Active'"><span style="background-color: #27AE61; padding: 3px; color: #fff; border-radius: 3px;">{{request.status}}</span></td>
-            </ng-container>
           
-          </ng-container>
+         
+
+      
       
           <ng-container matColumnDef="Actions">
             <th class="header actions-column" mat-header-cell *matHeaderCellDef>
@@ -92,21 +57,14 @@
                 <mat-icon class="sort-icon" ></mat-icon>
               </button> -->
             </th>
-            <!-- <td mat-cell *matCellDef="let request">
-                <button mat-icon-button (click)="updateUser(request)" title="Update user"><mat-icon class="valid-icon">edit</mat-icon></button>
-                <button mat-icon-button (click)="deleteUser(request)" title="Delete user" *ngIf="request.status=='Active'">
-                  <mat-icon class="refus-icon" >delete</mat-icon>
-                </button>
-                <button mat-icon-button (click)="restoreUser(request)" title="Bring back this user" *ngIf="request.status=='out of work'">
-                  <mat-icon class="restore-icon" >restore_from_trash</mat-icon>
-                </button>
-                <button mat-icon-button (click)="viewUserDetails(request)" ><mat-icon class="detail-icon" title="Click to view user details.">remove_red_eye</mat-icon></button>
-            </td> -->
+            <td mat-cell *matCellDef="let request">
+                <button mat-raised-button class="btn-green" (click)="onUpdateClick(request)"><mat-icon>edit</mat-icon>Update</button>
+            </td>
           </ng-container>
           
       
-          <!-- <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
-          <tr mat-row *matRowDef="let request; columns: columnsToDisplay"></tr> -->
+          <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
+          <tr mat-row *matRowDef="let request; columns: columnsToDisplay"></tr>
       
         </table>
 
