--- a/frontend/src/app/admin/user-info/user-info.component.html
+++ b/frontend/src/app/admin/user-info/user-info.component.html
@@ -52,18 +52,36 @@
                     
                 </div>
             </div>
-            <div class="sectors-container" *ngIf="data.role != 'Admin'">
-                <div class="field">
-                    <label>Sectors</label>
-                    <div class="sectors" >
-                        <ng-container *ngFor="let sector of sectors">
+            <ng-container *ngIf="data.role == 'Admin' || data.role == 'Back Office'; else sectorDisplay">
+                <div class="sectors-container">
+                    <div class="field">
+                        <label>Sectors</label>
+                        <div class="sectors" >
+                            
                             <div class="case">
-                                <p>{{sector.nameSecteur}}</p>
+                                <p>Has All Sectors</p>
                             </div>
-                        </ng-container>     
+                            
+                        </div>
                     </div>
                 </div>
-            </div>
+            </ng-container>
+            <ng-template #sectorDisplay>
+                <div class="sectors-container">
+                    <div class="field">
+                        <label>Sectors</label>
+                        <div class="sectors" >
+                            <ng-container *ngFor="let sector of sectors">
+                                <div class="case">
+                                    <p>{{sector.nameSecteur}}</p>
+                                </div>
+                            </ng-container>     
+                        </div>
+                    </div>
+                </div>
+            </ng-template>
+            
+            
         </div>
     </div>
     <!-- <p> {{data.NomPrenom}}</p> -->
